--- a/index.html
+++ b/index.html
@@ -1,67 +1,144 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>ClassHero | สื่อการเรียนการสอน</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ClassHero | สื่อการเรียนรู้ดิจิทัล & AR</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Tahoma, sans-serif;
       background: #f5f7fa;
+      color: #333;
     }
     header {
       background: #0a2540;
-      color: white;
-      padding: 20px;
-      text-align: center;
+      color: #fff;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    nav a {
+      color: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500;
     }
     section {
-      padding: 40px;
+      padding: 60px 40px;
     }
     .hero {
-      background: #1e3a8a;
-      color: white;
+      background: linear-gradient(120deg, #0a2540, #1e3a8a);
+      color: #fff;
       text-align: center;
-      padding: 80px 20px;
+    }
+    .hero h1 {
+      font-size: 42px;
+      margin-bottom: 20px;
     }
     .btn {
-      display: inline-block;
       background: #38bdf8;
+      color: #000;
       padding: 12px 24px;
-      margin-top: 20px;
-      color: black;
-      text-decoration: none;
       border-radius: 6px;
+      text-decoration: none;
       font-weight: bold;
+      margin: 10px;
+      display: inline-block;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    }
+    footer {
+      background: #0a2540;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1>ClassHero</h1>
-  <p>สื่อการเรียนรู้ดิจิทัล & AR</p>
-</header>
+  <!-- Header -->
+  <header>
+    <h2>ClassHero</h2>
+    <nav>
+      <a href="#home">หน้าแรก</a>
+      <a href="#about">เกี่ยวกับเรา</a>
+      <a href="#products">สินค้า</a>
+      <a href="#how">วิธีใช้งาน</a>
+      <a href="#contact">ติดต่อ</a>
+    </nav>
+  </header>
 
-<section class="hero">
-  <h2>เปลี่ยนห้องเรียนธรรมดา<br>ให้เป็นห้องเรียนแห่งอนาคต</h2>
-  <p>สื่อการเรียนการสอนสำหรับครูและนักเรียนยุคใหม่</p>
-  <a href="#" class="btn">ดูสินค้า</a>
-</section>
+  <!-- Hero Section -->
+  <section class="hero" id="home">
+    <h1>เปลี่ยนห้องเรียนธรรมดา<br>ให้เป็นห้องเรียนแห่งอนาคต</h1>
+    <p>สื่อการเรียนรู้ดิจิทัล & AR ที่ช่วยให้นักเรียนเข้าใจง่าย สนุก และเรียนรู้เชิงลึก</p>
+    <a href="#products" class="btn">ดูสินค้า</a>
+    <a href="#contact" class="btn">ขอ Demo</a>
+  </section>
 
-<section>
-  <h2>เกี่ยวกับเรา</h2>
-  <p>
-    ClassHero คือบริษัทธุรกิจการศึกษาที่พัฒนาสื่อการเรียนรู้
-    เพื่อช่วยให้ครูสอนง่าย และนักเรียนเรียนรู้ได้สนุกขึ้น
-  </p>
-</section>
+  <!-- About -->
+  <section id="about">
+    <h2>เกี่ยวกับเรา</h2>
+    <p>
+      ClassHero คือบริษัทธุรกิจการศึกษาที่พัฒนาสื่อการเรียนรู้ดิจิทัลและ AR
+      เพื่อช่วยให้ครูสอนง่าย และนักเรียนเรียนรู้ได้อย่างมีประสิทธิภาพ
+    </p>
+  </section>
 
-<section>
-  <h2>ติดต่อเรา</h2>
-  <p>Email: classhero@email.com</p>
-</section>
+  <!-- Products -->
+  <section id="products">
+    <h2>สินค้าและบริการ</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>สื่อการเรียนรู้แบบ AR</h3>
+        <p>เรียนรู้ผ่านโมเดล 3 มิติ เสริมความเข้าใจเชิงลึก</p>
+      </div>
+      <div class="card">
+        <h3>Interactive Learning</h3>
+        <p>กิจกรรมโต้ตอบ เกมการเรียนรู้ และใบงานดิจิทัล</p>
+      </div>
+      <div class="card">
+        <h3>ชุดสื่อประกอบการสอน</h3>
+        <p>สอดคล้องหลักสูตร ใช้งานได้ทันทีในห้องเรียน</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- How it works -->
+  <section id="how">
+    <h2>วิธีการใช้งาน</h2>
+    <ol>
+      <li>สแกน QR Code</li>
+      <li>เปิดสื่อ AR / Interactive</li>
+      <li>เรียนรู้ผ่านกิจกรรม</li>
+      <li>ทำแบบประเมินผล</li>
+    </ol>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact">
+    <h2>ติดต่อเรา</h2>
+    <p>สนใจสื่อการเรียนรู้ หรือขอทดลองใช้งาน</p>
+    <p>Email: info@classhero.co.th | โทร: 0X-XXX-XXXX</p>
+    <a href="#" class="btn">แอด Line OA</a>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2026 ClassHero Education Co., Ltd.</p>
+  </footer>
 
 </body>
 </html>
